--- a/g3-architect-website.html
+++ b/g3-architect-website.html
@@ -6,11 +6,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class=".work-sans-font">
-    <header>
-      <nav>
+  <body class="work-sans-font">
+    <header class="bg-light">
+      <nav class="navbar display-flex">
         <h3 class="brand">G3 Architect</h3>
+        <ul class="nav-links display-flex">
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Login</a>
+          </li>
+        </ul>
       </nav>
+      <div class="banner"></div>
     </header>
 
     <body></body>
